# var

./: CMakeLists.txt  README.md  main.cpp  var.hpp
.github/workflows/: main.yml  test.yml
test/: CMakeLists.txt  test.cpp
